oop_mro/tests/trybuild/fail_constructor_indirect_base.rs
use oop_mro::prelude::*;

oop_class! {
    class Object {}
    class Animal: Object {}

    class Dog: Animal {
        constructor(): Object() {}
    }
}

fn main() {}
